CB-21956-Create API and flow for changing disk type and increase disk size of a DH 1. Validate the request for group's disks size is lesser than the request size. 2. Validate the request for AWS cloud platform. 3. Add resize scripts to nodes being provisioned. 4. Change disk type. 5. Call resize script to increase partition size. 6. Unit tests.